# pycounts

./: CHANGELOG.md  LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
pycounts/: README.md  pyproject.toml
pycounts/docs/: conf.py  example.ipynb
src/psirving_pycounts/: datasets.py  plotting.py
src/psirving_pycounts/data/: flatland.txt
tests/: test_pycounts.py
